<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_Id"
        android:layout_width="5sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/tv_Id"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_Nombre"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/tv_Nombre"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_Unidades"
        android:layout_width="60sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/tv_Unidades"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_Precio"
        android:layout_width="20sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/tv_Precio"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</LinearLayout>